Improve naming in your Models and ViewModels

--- a/src/Msoop/Pages/Sheets/EditDelete.cshtml
+++ b/src/Msoop/Pages/Sheets/EditDelete.cshtml
@@ -53,7 +53,7 @@
                 <tr>
                     <th scope="row">@i</th>
                     <td>@sheetSection.Name</td>
-                    <td>@sheetSection.PostLimit</td>
+                    <td>@sheetSection.MaxPostCount</td>
                     <td>@sheetSection.PostOrdering.GetEnumDisplayName()</td>
                     <td>
                         <a asp-page="Subreddits/EditDelete"
