--- a/src/Msoop/Pages/Sheets/Subreddits/EditDelete.cshtml
+++ b/src/Msoop/Pages/Sheets/Subreddits/EditDelete.cshtml
@@ -16,9 +16,9 @@
 <form method="post">
     <h1 class="h3">/r/@Model.Data.Name</h1>
     <div class="form-group">
-        <label asp-for="Data.PostLimit" class="control-label"></label>
-        <input asp-for="Data.PostLimit" class="form-control"/>
-        <span asp-validation-for="Data.PostLimit" class="text-danger"></span>
+        <label asp-for="Data.MaxPostCount" class="control-label"></label>
+        <input asp-for="Data.MaxPostCount" class="form-control"/>
+        <span asp-validation-for="Data.MaxPostCount" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="Data.PostOrdering" class="control-label"></label>
