--- a/src/Msoop/Pages/Sheets/EditDelete.cshtml
+++ b/src/Msoop/Pages/Sheets/EditDelete.cshtml
@@ -25,6 +25,18 @@
         <span asp-validation-for="Data.CustomAgeLimit" class="text-danger"></span>
     </div>
 
+    <div class="form-control">
+        <input asp-for="Data.AllowOver18">
+        <label asp-for="Data.AllowOver18"></label>
+    </div>
+    <div class="form-control">
+        <input asp-for="Data.AllowSpoilers">
+        <label asp-for="Data.AllowSpoilers"></label>
+    </div>
+    <div class="form-control">
+        <input asp-for="Data.AllowStickied">
+        <label asp-for="Data.AllowStickied"></label>
+    </div>
     <button type="submit" asp-page-handler="Edit" class="btn btn-primary">Save</button>
     <button type="submit" asp-page-handler="Delete" class="btn btn-danger">Delete</button>
 </form>
