Show confirmation modal when trying to delete sheet or subreddit

--- a/src/Msoop/Pages/Shared/_Layout.cshtml
+++ b/src/Msoop/Pages/Shared/_Layout.cshtml
@@ -25,6 +25,8 @@
     </main>
 </div>
 
+@await RenderSectionAsync("Modals", required: false)
+
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
