Ensure every page has accurate page title

--- a/src/Msoop/Pages/Sheets/EditDelete.cshtml
+++ b/src/Msoop/Pages/Sheets/EditDelete.cshtml
@@ -5,6 +5,7 @@
 @model Msoop.Pages.Sheets.EditDelete
 
 @{
+    ViewData["Title"] = "Edit your sheet";
     ViewData["id"] = RouteData.Values["id"];
 }
 
