--- a/src/Msoop/Pages/Sheets/Subreddits/Create.cshtml
+++ b/src/Msoop/Pages/Sheets/Subreddits/Create.cshtml
@@ -3,6 +3,7 @@
 @model Msoop.Pages.Sheets.Subreddits.Create
 
 @{
+    ViewData["Title"] = "Add subreddit";
     ViewData["sheetId"] = RouteData.Values["sheetId"];
 }
 
