--- a/src/Msoop/Pages/Status404.cshtml
+++ b/src/Msoop/Pages/Status404.cshtml
@@ -9,7 +9,7 @@
 
 <html lang="en">
 <headVi>
-    <title>404 - Not Found</title>
+    <title>Page not found - Msoop</title>
 </headVi>
 <body>
 <div>
