--- a/src/Msoop/Pages/Index.cshtml
+++ b/src/Msoop/Pages/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Msoop";
+    ViewData["Title"] = "Multiple subreddits on one page";
 }
 
 <section class="">
