Add Google Analytics and consent cookie

--- a/src/Msoop/Pages/Shared/_Layout.cshtml
+++ b/src/Msoop/Pages/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"] - Msoop</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="~/css/site.css"/>
+    <partial name="_GoogleAuthentication"/>
 </head>
 <body>
 <header>
@@ -20,6 +21,7 @@
     </nav>
 </header>
 <div class="container-fluid">
+    <partial name="_CookieConsent"/>
     <main role="main" class="pb-3">
         @RenderBody()
     </main>
