--- a/src/Msoop/Pages/Shared/_CookieConsent.cshtml
+++ b/src/Msoop/Pages/Shared/_CookieConsent.cshtml
@@ -1,5 +1,4 @@
 @using Microsoft.AspNetCore.Http.Features
-
 @{
     var consentFeature = Context.Features.Get<ITrackingConsentFeature>();
     var cookieString = consentFeature?.CreateConsentCookie();
@@ -15,19 +14,23 @@
         <button class="accept-policy close" data-cookie-string="@cookieString">Accept</button>
     </div>
     <script>
-        (function () {
+        (function() {
             const consentDiv = document.querySelector("#cookieConsent");
             const acceptBtn = consentDiv.querySelector("button[data-cookie-string]");
             const rejectBtn = consentDiv.querySelector("button:not([data-cookie-string])");
-            
-            acceptBtn.addEventListener("click", () => {
-                document.cookie = acceptBtn.dataset.cookieString;
-                consentDiv.style.display = "none";
-            }, false);
-            rejectBtn.addEventListener("click", () => {
-                document.cookie = acceptBtn.dataset.cookieString.replace("=yes", "=no");
-                consentDiv.style.display = "none";
-            }, false);
+
+            acceptBtn.addEventListener("click",
+                () => {
+                    document.cookie = acceptBtn.dataset.cookieString;
+                    consentDiv.style.display = "none";
+                },
+                false);
+            rejectBtn.addEventListener("click",
+                () => {
+                    document.cookie = acceptBtn.dataset.cookieString.replace("=yes", "=no");
+                    consentDiv.style.display = "none";
+                },
+                false);
         })();
     </script>
 }
