--- a/src/Msoop/wwwroot/css/modal.css
+++ b/src/Msoop/wwwroot/css/modal.css
@@ -2,46 +2,44 @@
   Basic Modal Styles
 \**************************/
 
-.modal {
-    font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, helvetica neue, helvetica, ubuntu, roboto, noto, segoe ui, arial, sans-serif;
-}
+.modal { font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, helvetica neue, helvetica, ubuntu, roboto, noto, segoe ui, arial, sans-serif; }
 
 .modal__overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    align-items: center;
     background: rgba(0, 0, 0, 0.6);
+    bottom: 0;
     display: flex;
     justify-content: center;
-    align-items: center;
+    left: 0;
+    position: fixed;
+    right: 0;
+    top: 0;
 }
 
 .modal__container {
     background-color: #fff;
-    padding: 30px;
-    max-width: 500px;
-    max-height: 100vh;
     border-radius: 4px;
-    overflow-y: auto;
     box-sizing: border-box;
+    max-height: 100vh;
+    max-width: 500px;
+    overflow-y: auto;
+    padding: 30px;
 }
 
 .modal__header {
+    align-items: center;
     display: flex;
     justify-content: space-between;
-    align-items: center;
 }
 
 .modal__title {
-    margin-top: 0;
-    margin-bottom: 0;
-    font-weight: 600;
-    font-size: 1.25rem;
-    line-height: 1.25;
-    color: #00449e;
     box-sizing: border-box;
+    color: #00449e;
+    font-size: 1.25rem;
+    font-weight: 600;
+    line-height: 1.25;
+    margin-bottom: 0;
+    margin-top: 0;
 }
 
 .modal__close {
@@ -49,43 +47,41 @@
     border: 0;
 }
 
-.modal__header .modal__close:before {
-    content: "\2715";
-}
+.modal__header .modal__close:before { content: "\2715"; }
 
 .modal__content {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-    line-height: 1.5;
     color: rgba(0, 0, 0, .8);
+    line-height: 1.5;
+    margin-bottom: 2rem;
+    margin-top: 2rem;
 }
 
 .modal__btn {
-    font-size: .875rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    padding-top: .5rem;
-    padding-bottom: .5rem;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-appearance: button;
+    -webkit-backface-visibility: hidden;
+    -webkit-transform: translateZ(0);
+    backface-visibility: hidden;
     background-color: #e6e6e6;
-    color: rgba(0, 0, 0, .8);
     border-radius: .25rem;
     border-style: none;
     border-width: 0;
+    color: rgba(0, 0, 0, .8);
     cursor: pointer;
-    -webkit-appearance: button;
-    text-transform: none;
-    overflow: visible;
+    font-size: .875rem;
     line-height: 1.15;
     margin: 0;
-    will-change: transform;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    -webkit-transform: translateZ(0);
+    overflow: visible;
+    padding-bottom: .5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-top: .5rem;
+    text-transform: none;
     transform: translateZ(0);
     transition: -webkit-transform .25s ease-out;
     transition: transform .25s ease-out;
     transition: transform .25s ease-out, -webkit-transform .25s ease-out;
+    will-change: transform;
 }
 
 .modal__btn:focus, .modal__btn:hover {
@@ -101,67 +97,42 @@
 /**************************\
   Demo Animation Style
 \**************************/
+
 @keyframes mmfadeIn {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
+    from { opacity: 0; }
+
+    to { opacity: 1; }
 }
 
 @keyframes mmfadeOut {
-    from {
-        opacity: 1;
-    }
-    to {
-        opacity: 0;
-    }
+    from { opacity: 1; }
+
+    to { opacity: 0; }
 }
 
 @keyframes mmslideIn {
-    from {
-        transform: translateY(15%);
-    }
-    to {
-        transform: translateY(0);
-    }
+    from { transform: translateY(15%); }
+
+    to { transform: translateY(0); }
 }
 
 @keyframes mmslideOut {
-    from {
-        transform: translateY(0);
-    }
-    to {
-        transform: translateY(-10%);
-    }
+    from { transform: translateY(0); }
+
+    to { transform: translateY(-10%); }
 }
 
-.micromodal-slide {
-    display: none;
-}
+.micromodal-slide { display: none; }
 
-.micromodal-slide.is-open {
-    display: block;
-}
+.micromodal-slide.is-open { display: block; }
 
-.micromodal-slide[aria-hidden="false"] .modal__overlay {
-    animation: mmfadeIn .3s cubic-bezier(0.0, 0.0, 0.2, 1);
-}
+.micromodal-slide[aria-hidden="false"] .modal__overlay { animation: mmfadeIn .3s cubic-bezier(0.0, 0.0, 0.2, 1); }
 
-.micromodal-slide[aria-hidden="false"] .modal__container {
-    animation: mmslideIn .3s cubic-bezier(0, 0, .2, 1);
-}
+.micromodal-slide[aria-hidden="false"] .modal__container { animation: mmslideIn .3s cubic-bezier(0, 0, .2, 1); }
 
-.micromodal-slide[aria-hidden="true"] .modal__overlay {
-    animation: mmfadeOut .3s cubic-bezier(0.0, 0.0, 0.2, 1);
-}
+.micromodal-slide[aria-hidden="true"] .modal__overlay { animation: mmfadeOut .3s cubic-bezier(0.0, 0.0, 0.2, 1); }
 
-.micromodal-slide[aria-hidden="true"] .modal__container {
-    animation: mmslideOut .3s cubic-bezier(0, 0, .2, 1);
-}
+.micromodal-slide[aria-hidden="true"] .modal__container { animation: mmslideOut .3s cubic-bezier(0, 0, .2, 1); }
 
 .micromodal-slide .modal__container,
-.micromodal-slide .modal__overlay {
-    will-change: transform;
-}
+.micromodal-slide .modal__overlay { will-change: transform; }
