--- a/src/Msoop.Web/Pages/Status404.cshtml
+++ b/src/Msoop.Web/Pages/Status404.cshtml
@@ -8,9 +8,9 @@
 <!DOCTYPE html>
 
 <html lang="en">
-<headVi>
+<head>
     <title>Page not found - Msoop</title>
-</headVi>
+</head>
 <body>
 <div>
     <h1>Wrong page</h1>
