--- a/src/Msoop.Web/Pages/Shared/_Layout.cshtml
+++ b/src/Msoop.Web/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,26 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+    <!-- Primary Meta Tags -->
     <title>@ViewData["Title"] - Msoop</title>
+    <meta name="title" content="Msoop - Multiple subreddits on one page">
+    <meta name="description" content="With msoop you can group subreddits into sheets and then view each sheet on a single page.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://msoop.org/">
+    <meta property="og:title" content="Msoop - Multiple subreddits on one page">
+    <meta property="og:description" content="With msoop you can group subreddits into sheets and then view each sheet on a single page.">
+    <meta property="og:image" content="">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://msoop.org/">
+    <meta property="twitter:title" content="Msoop - Multiple subreddits on one page">
+    <meta property="twitter:description" content="With msoop you can group subreddits into sheets and then view each sheet on a single page.">
+    <meta property="twitter:image" content="">
+
     <link rel="stylesheet" href="~/css/main.css"/>
     <partial name="_GoogleAuthentication"/>
 
